--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -35,7 +35,11 @@
                 type="password"
               />
             </fieldset>
-            <button class="btn btn-lg btn-primary pull-xs-right" type="submit">
+            <button
+              class="btn btn-lg btn-primary pull-xs-right"
+              type="submit"
+              [disabled]="isSubmitting$ | async"
+            >
               Sign up
             </button>
           </fieldset>
