--- a/src/app/tagFeed/components/tag-feed/tag-feed.component.html
+++ b/src/app/tagFeed/components/tag-feed/tag-feed.component.html
@@ -3,7 +3,7 @@
   <div class="container page">
     <div class="row">
       <div class="col-lg-9">
-        <app-feed-toggler></app-feed-toggler>
+        <app-feed-toggler [tagName]="tagName"></app-feed-toggler>
         <app-feed [apiUrl]="apiUrl"></app-feed>
       </div>
       <div class="col-lg-3">
