feat: create form

--- a/src/app/article/components/article/article.component.html
+++ b/src/app/article/components/article/article.component.html
@@ -1,5 +1,5 @@
 <div class="article-page">
-  <div class="banner">
+  <div *ngIf="article" class="banner">
     <div class="container">
       <h1>{{ article.title }}</h1>
       <div class="article-meta">
