--- a/src/app/shared/modules/topBar/components/top-bar/top-bar.component.html
+++ b/src/app/shared/modules/topBar/components/top-bar/top-bar.component.html
@@ -16,7 +16,7 @@
           <a
             class="nav-link"
             routerlinkactive="active"
-            [routerLink]="['/editor']"
+            [routerLink]="['/articles/new']"
           >
             <i class="ion-compose"></i>&nbsp;New Article
           </a>
