--- a/src/app/shared/modules/feed/components/feed/feed.component.html
+++ b/src/app/shared/modules/feed/components/feed/feed.component.html
@@ -15,9 +15,13 @@
         </a>
         <span class="date"> {{ article.createdAt }} </span>
       </div>
-      <button class="pull-xs-right btn btn-sm btn-outline-primary">
-        <i class="ion-heart"></i> 4385
-      </button>
+      <div class="pull-xs-right">
+        <app-add-to-favorite
+          [isFavotire]="article.favorited"
+          [articleSlug]="article.slug"
+          [favoritesCount]="article.favoritesCount"
+        ></app-add-to-favorite>
+      </div>
     </div>
     <a class="preview-link" [routerLink]="['/articles', article.slug]">
       <h1>{{ article.title }}</h1>
