feat: давбалена функция подписки на пользователя

--- a/src/app/user-profile/copmonents/user-profile/user-profile.component.html
+++ b/src/app/user-profile/copmonents/user-profile/user-profile.component.html
@@ -13,59 +13,60 @@
           <h4>{{ userProfile.username }}</h4>
           <p>{{ userProfile.bio }}</p>
 
-          <div>
-            <i class="ion-plus-round"></i>
-            Follow qqqqqw
+          <app-add-to-follow
+            *ngIf="!(isCurrentUserProfile$ | async)"
+            [username]="userProfile.username"
+            [isFollow]="userProfile.following"
+          ></app-add-to-follow>
 
-            <a
-              *ngIf="isCurrentUserProfile$ | async"
-              class="btn btn-sm btn-outline-secondary action-btn"
-              [routerLink]="['/settings']"
-            >
-              <i class="ion-gear-a"></i> Edit Profile Settings
-            </a>
-          </div>
+          <a
+            *ngIf="isCurrentUserProfile$ | async"
+            class="btn btn-sm btn-outline-secondary action-btn"
+            [routerLink]="['/settings']"
+          >
+            <i class="ion-gear-a"></i> Edit Profile Settings
+          </a>
         </div>
       </div>
     </div>
   </div>
+</div>
 
-  <!-- Container where User's posts & favs are list w/ toggle tabs -->
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-12 col-md-10 offset-md-1">
-        <!-- Tabs for switching between author articles & favorites -->
-        <div class="articles-toggle">
-          <ul class="nav nav-pills outline-active">
-            <li class="nav-item">
-              <a
-                class="nav-link"
-                [routerLink]="['/profiles', userProfile.username]"
-                routerLinkActive="active"
-                [routerLinkActiveOptions]="{ exact: true }"
-              >
-                My Posts
-              </a>
-            </li>
+<!-- Container where User's posts & favs are list w/ toggle tabs -->
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-md-10 offset-md-1">
+      <!-- Tabs for switching between author articles & favorites -->
+      <div *ngIf="userProfile?.username" class="articles-toggle">
+        <ul class="nav nav-pills outline-active">
+          <li class="nav-item">
+            <a
+              class="nav-link"
+              [routerLink]="['/profiles', userProfile.username]"
+              routerLinkActive="active"
+              [routerLinkActiveOptions]="{ exact: true }"
+            >
+              My Posts
+            </a>
+          </li>
 
-            <li class="nav-item">
-              <a
-                class="nav-link"
-                [routerLink]="['/profiles', userProfile.username, 'favorites']"
-                routerLinkActive="active"
-                [routerLinkActiveOptions]="{ exact: true }"
-              >
-                Favorites posts
-              </a>
-            </li>
-          </ul>
-        </div>
-
-        <!-- View where profile-articles renders to -->
-        <app-feed [apiUrl]="getApiUrl()"></app-feed>
+          <li class="nav-item">
+            <a
+              class="nav-link"
+              [routerLink]="['/profiles', userProfile.username, 'favorites']"
+              routerLinkActive="active"
+              [routerLinkActiveOptions]="{ exact: true }"
+            >
+              Favorites posts
+            </a>
+          </li>
+        </ul>
       </div>
 
-      <!-- End row & container divs -->
+      <!-- View where profile-articles renders to -->
+      <app-feed [apiUrl]="getApiUrl()"></app-feed>
     </div>
+
+    <!-- End row & container divs -->
   </div>
 </div>
