--- a/src/app/article/components/article/article.component.html
+++ b/src/app/article/components/article/article.component.html
@@ -3,13 +3,13 @@
     <div class="container">
       <h1>{{ article.title }}</h1>
       <div class="article-meta">
-        <a [routerLink]="['/profile', article.author.username]">
+        <a [routerLink]="['/profiles', article.author.username]">
           <img [src]="article.author.image" />
         </a>
         <div class="info">
           <a
             class="author"
-            [routerLink]="['/profile', article.author.username]"
+            [routerLink]="['/profiles', article.author.username]"
           >
             {{ article.author.username }}
           </a>
